[gd_scene load_steps=10 format=3 uid="uid://cgx3wsdprifbh"]

[ext_resource type="Script" uid="uid://cuuahylac5uu8" path="res://scripts/enemy_satellite.gd" id="1_vk63w"]
[ext_resource type="PackedScene" uid="uid://cx3nupylfohle" path="res://scenes/bullet.tscn" id="2_6irqn"]
[ext_resource type="PackedScene" uid="uid://dir8wcbllcrq7" path="res://scenes/debris.tscn" id="3_wuh1q"]
[ext_resource type="Texture2D" uid="uid://rjsysmwym2tc" path="res://assets/textures/enemy_satellite1.png" id="4_6irqn"]

[sub_resource type="Gradient" id="Gradient_6irqn"]
offsets = PackedFloat32Array(0, 0.506173, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnvrx"]
atlas = ExtResource("4_6irqn")
region = Rect2(0, 0, 46, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuh1q"]
atlas = ExtResource("4_6irqn")
region = Rect2(46, 0, 46, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_h3kc3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnvrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuh1q")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k48ca"]
size = Vector2(69, 26)

[node name="EnemySatellite" type="Area2D"]
script = ExtResource("1_vk63w")
health_bar_grad = SubResource("Gradient_6irqn")
bullet_scene = ExtResource("2_6irqn")
debris_scene = ExtResource("3_wuh1q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_h3kc3")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_k48ca")

[node name="BulletSpawnPos" type="Node2D" parent="."]
position = Vector2(0, -16)

[node name="Marker2D" type="Marker2D" parent="BulletSpawnPos"]
position = Vector2(0, 1)

[node name="Background" type="ColorRect" parent="."]
offset_left = -13.0
offset_top = 20.0
offset_right = 13.0
offset_bottom = 24.0
color = Color(0.47788, 0.47788, 0.47788, 1)

[node name="Healthbar" type="ColorRect" parent="Background"]
offset_right = 26.0
offset_bottom = 4.0
color = Color(0, 1, 0, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
